kubernetes/apps/platform/mail/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stalwart
  labels:
    app.kubernetes.io/name: stalwart
spec:
  selector:
    app.kubernetes.io/name: stalwart
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
