kubernetes/apps/platform/mail/base/stalwarden.yaml
apiVersion: v1
kind: Service
metadata:
  name: staliaswarden
  namespace: stalwart
  labels:
    app.kubernetes.io/name: staliaswarden
    app: staliaswarden
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: staliaswarden
    app: staliaswarden

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: staliaswarden
  namespace: stalwart
  labels:
    app.kubernetes.io/name: staliaswarden
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: staliaswarden
      app: staliaswarden
  template:
    metadata:
      labels:
        app.kubernetes.io/name: staliaswarden
        app: staliaswarden
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: staliaswarden
          image: ghcr.io/goingdark-social/staliaswarden:main-1866ada
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 128Mi
