kubernetes/apps/platform/mail/base/httproute-admin.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: stalwart-admin-interface
  namespace: gateway
spec:
  parentRefs:
    - name: external
      namespace: gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: stalwart
          port: 8080
