kubernetes/apps/platform/mail/base/httproute-ui.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: stalwart-admin
  namespace: gateway
spec:
  parentRefs:
    - name: external
      namespace: gateway
  hostnames:
    - "mailadmin.peekoff.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: stalwart
          port: 8080
