kubernetes/apps/platform/mail/base/staliaswarden.yaml
apiVersion: v1
kind: Service
metadata:
  name: staliaswarden
  namespace: stalwart
  labels:
    app.kubernetes.io/name: staliaswarden
    app: staliaswarden
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: staliaswarden
    app: staliaswarden

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: staliaswarden
  namespace: stalwart
  labels:
    app.kubernetes.io/name: staliaswarden
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: staliaswarden
      app: staliaswarden
  template:
    metadata:
      labels:
        app.kubernetes.io/name: staliaswarden
        app: staliaswarden
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1001
        runAsGroup: 1001
        fsGroup: 1001
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: staliaswarden
          image: ghcr.io/goingdark-social/staliaswarden:main-85b62c8
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 128Mi
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: staliaswarden-route
  namespace: stalwart
spec:
  parentRefs:
    - name: external
      namespace: gateway
  hostnames:
    - "bitwarden.peekoff.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: staliaswarden
          namespace: stalwart
          port: 80
